...
  val analyzed by cameraViewModel.analyzed.collectAsState()

  // List containing the ingredients analyzed to display
  val listOfIngredientToInput = cameraViewModel.listOfIngredientToInput.collectAsState()

  BottomSheetScaffold(
      modifier = Modifier.testTag("DisplayPicture"),
      topBar = {
        TopBarNavigation(
            title = "Analyze Picture",
            navAction = navigationActions,
            backArrowOnClickAction = { navigationActions.navigateTo(Screen.CAMERA) })
      },
...
@Composable
fun Display(bitmaps: List<Bitmap>, modifier: Modifier = Modifier) {
  if (bitmaps.isEmpty()) return
  val bitmap = bitmaps.last()
  Image(
      bitmap.asImageBitmap(),
      contentDescription = "Photo",
      modifier = modifier.testTag("ImageToAnalyze"))
}

