...
  val pickImage = cameraViewModel.galleryLauncher(null, null, null)

  val snackbarHostStateInfo = remember { SnackbarHostState() }
  val snackbarHostStateError = remember { SnackbarHostState() }

  BottomSheetScaffold(
      modifier = Modifier.testTag("CameraScreen"),
      topBar = {
        TopBarNavigation(
            title = "Camera",
            navAction = navigationActions,
            backArrowOnClickAction = {
              cameraViewModel.empty()
...
          // Snack bar host for error messages (red)
          SnackbarHost(
              hostState = snackbarHostStateError,
              modifier = Modifier.align(Alignment.TopCenter).testTag("Snack error"),
              snackbar = { snackbarData ->
                Snackbar(
                    modifier = Modifier.testTag("Error Snack Bar"),
                    snackbarData = snackbarData,
                    containerColor = Color.Red.copy(alpha = 0.5f),
                    contentColor = Color.White)
              })

          // Information snack bar is displayed each time there is something new to display from the
...
