...
              Box(
                  modifier = Modifier.weight(1f).testTag("LeftIconBox"),
                  contentAlignment = Alignment.CenterStart) {
                    if (navAction != null) {
                      if (navAction.canGoBack()) {
                        IconButton(
                            modifier = Modifier.testTag("LeftIconButton"),
                            onClick = { navAction.goBack() },
                        ) {
                          Icon(
                              modifier = Modifier.testTag("LeftIcon"),
                              imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                              contentDescription = "Back",
...
